--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,13 @@
 
 body {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   background-color: #fc92fc;
   background-image: linear-gradient(180deg, #fc92fc 0%, #7df2ff 100%);
 }
 
 .contenedores {
-  margin: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 hr {
@@ -28,9 +27,6 @@ footer {
   background-color: rgb(8, 8, 8);
   color: white;
   padding: 30px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
 }
 
 .navbar {
@@ -38,6 +34,13 @@ footer {
   display: flex;
   justify-content: center;
 }
+
+.espacioInput {
+  width: 200px;
+  margin: 0 auto;
+  display: block;
+}
+
 /* dispositivos small */
 
 @media all and (max-width: 767px) {
@@ -74,5 +77,10 @@ footer {
   }
   .contenedores {
     margin: 50px;
+  }
+  .espacioInput {
+    width: 250px;
+    margin: 0 auto;
+    display: block;
   }
 }
