--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Arvo&family=Bebas+Neue&family=Black+Han+Sans&family=Londrina+Outline&family=Montserrat:wght@300&family=Open+Sans&family=Orbitron&family=Poppins&family=Roboto:wght@300&family=Work+Sans:wght@500&display=swap");
+
 * {
   margin: 0px;
   border: 0px;
   font-size: 18px;
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
